Resolved issues (BugIDs: 534,532,509,538,518,536 and User Group(door schedule related Issue as per Suresh) and Toast related Issues)

--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -166,7 +166,7 @@
 													</div>-->
 													<div class="form-group col-sm-6 col-md-6 pl-0" ng-hide="editDevice.device_type=='master'">
 														<label for="">&nbsp;</label>
-														<select class="form-control" ng-options="item.device_id as item.device_name for item in masterDevices" ng-model="editDevice.device_master_id">
+														<select required class="form-control" ng-options="item.device_id as item.device_name for item in masterDevices" ng-model="editDevice.device_master_id">
 															<option value="">Select Primary Device</option>
 														</select>
 													</div>
