--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -131,7 +131,7 @@
 											</div>
 										</form>		
 									</script>
-									<a ng-click="addFacility()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Facility</span></a>
+									<a ng-click="addFacility();" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Facility</span></a>
 								</div>
 							</li>
 						</ul>
