implemented menu shortcut functionality and resolved some bugs

--- a/views/header.html
+++ b/views/header.html
@@ -144,7 +144,7 @@
 		<li class="dropdown nav-profile" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
 				<img src="images/avatar.jpg" alt="" class="img-circle size-30x30">
-				<span><span class="uname"><username><username></span> <fa name="angle-down"></fa></span>
+				<span><span class="uname"><username></username></span> <fa name="angle-down"></fa></span>
 			</a>
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
 				<li><a ui-sref="app.admin.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
