--- a/views/tmpl/admin/device/view-dependent-device.html
+++ b/views/tmpl/admin/device/view-dependent-device.html
@@ -122,6 +122,7 @@
 									<p><label>Model Name</label> {{details.device_model}}</p>
 									<p><label>Serial No.</label> {{details.device_serial_no}}</p>
 									<p><label>Device Type</label> {{details.device_type}}</p>
+									<p><label>Doors</label> {{showDoorsForDevice(details.doors)}}</p>
 									<p><label>Technician</label> {{details.technician_name}}</p>
 								</div>
 							</div>
