--- a/views/tmpl/admin/door/view-door.html
+++ b/views/tmpl/admin/door/view-door.html
@@ -123,6 +123,7 @@
 								<div class="row">
 									<div class="col-sm-12 col-md-12">
 										<div class="form-group profiledetail">
+											<p><label>Device</label> {{doorData.device_name}}</p>
 											<p><label>Name</label> {{doorData.door_name}}</p>
 											<p><label>Facility</label> {{doorData.facility_name}}</p>
 											<p><label>Door Groups</label> Entry Gate</p>
