--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -106,7 +106,7 @@
 													<th class="fri">Fri</th>
 													<th class="sat">Sat</th>
 													<th class="sun">Sun</th>
-													<th class="holidays">Holidays</th>
+													<!--<th class="holidays">Holidays</th>-->
 												</tr>
 											</thead>																
 										</table>
@@ -554,7 +554,7 @@
 																	<td class="fri" value="Friday">&nbsp;</td>
 																	<td class="sat" value="Saturday">&nbsp;</td>
 																	<td class="sun" value="Sunday">&nbsp;</td>
-																	<td class="holidays" value="holidays">&nbsp;</td>
+																	<!-- <td class="holidays" value="holidays">&nbsp;</td> -->
 																</tr>
 																<tr value="20:30">
 																	<td class="nobrl mon" value="Monday">&nbsp;</td>
