--- a/views/tmpl/admin/schedule/view-schedule.html
+++ b/views/tmpl/admin/schedule/view-schedule.html
@@ -92,7 +92,7 @@
 							<div class="profile-settings">
 								<div class="row">
 									<div class="form-group col-md-12 legend">
-										<h4><strong>Configuration Details</strong> <span class="pull-right"><a style="font-size: 14px;" ui-sref="app.admin.schedule.edit-schedule-groups">Edit</a></span></h4>
+										<h4><strong>Configuration Details</strong> <span class="pull-right"><a style="font-size: 14px;" ui-sref="app.admin.schedule.edit-schedule-groups({schedule_id:ViewSchedule.schedule_id})">Edit</a></span></h4>
 									</div>
 								</div>								
 								<div class="row">
