--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -148,7 +148,7 @@
 												<div class="row">
 													<div class="col-md-12">
 														<label for="">Doors</label><br/><!--doorList-->
-														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
+														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList" required>
 														</select>
 													</div>
 												</div>
