--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -410,10 +410,11 @@
 																	<td>{{phone_code.Door_Name}}</td>
 																	<td><div ng-repeat="phone in phone_code.Detail.phone_numbers">{{phone}}</div></td>
 																	<td>
-																		<select style="border: 0; width: 100%;">
-																			<option value="" ng-selected="phone_code.status == 1">Active</option>
-																			<option value="" ng-selected="phone_code.status == 0">Inactive</option>
-																		</select>
+																		<!--<select style="border: 0; width: 100%;">-->
+																			<!--<option value="" ng-selected="phone_code.status == 1">Active</option>-->
+																			<!--<option value="" ng-selected="phone_code.status == 0">Inactive</option>-->
+																		<!--</select>-->
+																		{{phone_code.status==0?'Inactive':'Active'}}
 																	</td>
 																	<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit" ng-click="editCredential(phone_code, 'phone_code')"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
@@ -474,10 +475,11 @@
 																	<td>{{rfid_code.Detail.rfid_facility_id}}</td>
 																	<td>{{rfid_code.Door_Name}} </td>
 																	<td>
-																		<select style="border: 0; width: 100%;">
-																			<option value="" ng-selected="rfid_code.status == 1">Active</option>
-																			<option value="" ng-selected="rfid_code.status == 0">Inactive</option>
-																		</select>
+																		<!--<select style="border: 0; width: 100%;">-->
+																			<!--<option value="" ng-selected="rfid_code.status == 1">Active</option>-->
+																			<!--<option value="" ng-selected="rfid_code.status == 0">Inactive</option>-->
+																		<!--</select>-->
+																		{{rfid_code.status==0?'Inactive':'Active'}}
 																	</td>
 																	<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit" ng-click="editCredential(rfid_code, 'rfid_code')"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
@@ -537,10 +539,11 @@
 																	<td>{{nfccode.Detail.nfc_code}}</td>
 																	<td>{{nfccode.Door_Name}}</td>
 																	<td>
-																		<select style="border: 0; width: 100%;">
-																			<option value="" ng-selected="nfccode.status == 1">Active</option>
-																			<option value="" ng-selected="nfccode.status == 0">Inactive</option>
-																		</select>
+																		<!--<select style="border: 0; width: 100%;">-->
+																			<!--<option value="" ng-selected="nfccode.status == 1">Active</option>-->
+																			<!--<option value="" ng-selected="nfccode.status == 0">Inactive</option>-->
+																		<!--</select>-->
+																		{{nfccode.status==0?'Inactive':'Active'}}
 																	</td>
 																	<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit" ng-click="editCredential(nfccode, 'nfc_code')"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
@@ -603,10 +606,11 @@
 																	<td><input type="password" style="border: 0px;" readonly value="{{blecode.Detail.ble_password}}"></td>
 																	<td>{{blecode.Door_Name}}</td>
 																	<td>
-																		<select style="border: 0; width: 100%;">
-																			<option value="" ng-selected="blecode.status == 1">Active</option>
-																			<option value="" ng-selected="blecode.status == 0">Inactive</option>
-																		</select>
+																		<!--<select style="border: 0; width: 100%;">-->
+																			<!--<option value="" ng-selected="blecode.status == 1">Active</option>-->
+																			<!--<option value="" ng-selected="blecode.status == 0">Inactive</option>-->
+																		<!--</select>-->
+																		{{blecode.status==0?'Inactive':'Active'}}
 																	</td>
 																	<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit" ng-click="editCredential(blecode, 'ble_code')"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
