--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -660,7 +660,7 @@
 											<div class="col-sm-6 col-md-6 form-group" ng-controller="DatepickerDemoCtrl">
 												<label for="">Start Date</label>
 												<div class="input-group">
-													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.schedule_start_date" is-open="opened" datepicker-options="dateOptions" close-text="Close" />
+													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.selected_schedule_start_date" is-open="opened" datepicker-options="dateOptions" close-text="Close" />
 													<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 													</span>
@@ -687,7 +687,7 @@
 											</div>
 											<div class="col-sm-12 col-md-6 form-group">
 												<label for="">Block</label><br/>
-												<select class="form-control form-group pull-left" ng-model="schedule.block" ng-options="color for color in blocks">
+												<select class="form-control form-group pull-left" ng-model="$parent.schedule.block" ng-options="color for color in blocks">
 													<option value="">Select Block</option>
 												</select>
 												<button type="button" ng-click="$parent.deleteBlock()" class="btn btn-default btn-ef btn-ef-6 btn-ef-6a btn-rounded pull-right ml-10 mt-5">Delete Block</button>
@@ -825,7 +825,7 @@
 											</div>
 											<div class="form-group col-sm-12 col-md-6" ng-hide="mySwitch" ng-controller="DatepickerDemoCtrl">
 												<div class="input-group">
-													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.schedule_expiration_date" is-open="opened" datepicker-options="dateOptions" close-text="Close" />
+													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.selected_schedule_expiration_date" is-open="opened" datepicker-options="dateOptions" close-text="Close" />
 													<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 													</span>
