--- a/views/tmpl/admin/schedule/add-schedule.html
+++ b/views/tmpl/admin/schedule/add-schedule.html
@@ -656,9 +656,9 @@
 										</div>
 										<div class="row">
 											<div class="col-sm-6 col-md-6 form-group" ng-controller="DatepickerDemoCtrl">
-												<label for="">Start Date</label>
+												<label for="">Start Date </label>
 												<div class="input-group">
-													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="schedule.schedule_start_date" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close"  required />
+													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="schedule.schedule_start_date" is-open="opened" min-date="$parent.minDate" datepicker-options="dateOptions" ng-required="true" close-text="Close"  required />
 													<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 													</span>
@@ -671,11 +671,11 @@
 												<div class="row">
 													<div class="col-sm-6 col-md-6 form-group">
 														<label for="">Start Time</label>
-														<input type="text" name="" ng-model="schedule.schedule_start_time" id="" class="form-control">
+														<input type="text" name="" ng-model="schedule.schedule_start_time" id="" class="form-control" disabled>
 													</div>
 													<div class="col-sm-6 col-md-6 form-group">
 														<label for="">End Time</label>
-														<input type="text" name="" ng-model="schedule.schedule_end_time" id="" class="form-control">
+														<input type="text" name="" ng-model="schedule.schedule_end_time" id="" class="form-control" disabled>
 													</div>
 													<input type="hidden" name="" ng-model="schedule.schedule_weekday" id="" class="form-control">
 													<div class="col-sm-12 col-md-12 form-group">
@@ -742,9 +742,9 @@
 													</div>
 													<div class="row" ng-init="visibiltyUserGroup=false"  ng-show="visibiltyUserGroup">
 														<div class="col-sm-12 col-md-6 form-group">
-															<label for="">Date</label>
+															<label for="">Date </label>
 															<div class="input-group" ng-controller="DatepickerDemoCtrl">
-																<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="exception.date" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+																<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="exception.date" min-date="schedule.schedule_start_date" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
 																<span class="input-group-btn">
 																	<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 																</span>
@@ -820,15 +820,15 @@
 													<label class="btn btn-default" ng-model="schedule.schedule_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
-											<div class="form-group col-sm-12 col-md-6" ng-hide="radioModel=='Inactive'" ng-init="mySwitch=true">
+											<div class="form-group col-sm-12 col-md-6" ng-hide="radioModel=='Inactive'" ng-init="schedule.no_expirations=true">
 												<label for="">&nbsp;</label><br/>
 												<label class="checkbox checkbox-custom-alt" style="margin-bottom:8px;">
-													<input name="customRadioAlt" type="checkbox" checked="checked" ng-model="mySwitch"><i></i> No Expirations
+													<input name="customRadioAlt" type="checkbox" checked="checked" ng-model="schedule.no_expirations"><i></i> No Expirations
 												</label>											
 											</div>
-											<div class="form-group col-sm-12 col-md-6" ng-hide="mySwitch" ng-controller="DatepickerDemoCtrl">
+											<div class="form-group col-sm-12 col-md-6" ng-hide="schedule.no_expirations" ng-controller="DatepickerDemoCtrl">
 												<div class="input-group">
-													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.schedule.expiration" is-open="opened" datepicker-options="dateOptions"  close-text="Close" />
+													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.schedule.expiration" is-open="opened" min-date="schedule.schedule_start_date" datepicker-options="dateOptions"  close-text="Close" />
 													<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 													</span>
